version/0.1/_sources/models.rst.txt
Scade One models
================

.. 'Flagship' example models
.. -------------------------

.. Below is a list of cards pointing to large Ansys Scade One examples stored in their own, dedicated repositories. They are typically large in scope, composed of multiple, interconnected models, and have their own CI/CD actions.

.. .. grid:: 2 2 3 3
..     :gutter: 0 4 0 0

..     .. grid-item-card:: TODO
..       :img-top: _static/thumbnails/TODO.jpg
..       :link: https://TODO.examples.scadeone.docs.pyansys.com
..       :text-align: center

Example models
--------------

Below is a list of Ansys Scade One models stored in this repository. They are typically small in scope and associated to some external content (article, course, etc.).

.. grid:: 2 2 3 3

    .. grid-item-card:: Scade One – Using Rapid Prototyper to augment model simulation
        :margin: 0 4 0 0
        :img-top: _static/thumbnails/2025-03-11-graphical-debug-panels.jpg

        :fas:`fa-solid fa-file-zipper` :model_zip:`Download model <2025-03-11-graphical-debug-panels>`

        :fas:`fa-solid fa-code` :model_sources:`View sources <2025-03-11-graphical-debug-panels>`

        :fas:`fa-solid fa-newspaper` `Companion article <https://innovationspace.ansys.com/knowledge/forums/topic/scade-one-using-rapid-prototyper-to-augment-model-simulation/>`__

